back1-tmp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-deployment-1
  namespace: my-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend1-1
  template:
    metadata:
      labels:
        app: backend1-1
    spec:
      containers:
        - name: backend1-1
          image: tjdanqkr/test:back
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend1-service-1
  namespace: my-namespace
spec:
  selector:
    app: backend1-1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
