back1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-deployment
  namespace: my-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend1
  template:
    metadata:
      labels:
        app: backend1
    spec:
      containers:
        - name: backend1
          image: tjdanqkr/test:back
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend1-service
  namespace: my-namespace
spec:
  selector:
    app: backend1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
