back2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-deployment
  namespace: my-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
        - name: backend2
          image: tjdanqkr/test:back2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend2-service
  namespace: my-namespace
spec:
  selector:
    app: backend2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
