ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace:
    my-namespace
    #  annotations:
    #    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    #  - host: localhost
    - http:
        paths:
          - path: /api/v1/demo1
            pathType: Prefix
            backend:
              service:
                name: backend1-service
                port:
                  number: 8080
          - path: /api/v1/demo2
            pathType: Prefix
            backend:
              service:
                name: backend2-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
